2008-09-26  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* src/Application.cs: Make line endings consistent.

2008-09-21  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* src/Application.cs: If there's a valid backend that fails to
	  authenticate, retry instead of just showing the preferences window.
	   Fixes bug #538019, patch courtesy of Joseph Method and Andrew
	  Conkling.
	* src/Backends/Rtm/RtmBackend.cs: More informative exception handling
	  during authentication.

2008-09-15  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* src/TaskWindow.cs: Don't paint the background of the status bar white
	  (it was overriding theme colors).  Partial fix for bug #532766,
	  patch courtesy of Mark A. Nicolosi.

2008-09-04  Brian G. Merrell <bgmerrell@gmail.com>
	
	* src/Backends/Dummy/DummyTask.cs: add id proprety to adhere to AbstractTask.
	* src/Backends/Dummy/DummyBackend.cs: add id property to adhere to the AbstractTask.
	This fixes a compiler error when trying to compile with the dummy backend.

2008-08-31  Brian G. Merrell <bgmerrell@gmail.com>

	* src/TaskTreeView.cs: Display relevant information in the status bar,
	including a cute (according to Sandy) countdown when completing tasks.
	This is a fix for Bug 533033, with many good ideas from steve
	evolvedlight co uk
	* src/TaskWindow.cs: Display relevant information in the status bar.
	Again, many contributions from steve evolvedlight co uk.
	* src/Application.cs: Just a silly little tooltip for the tray icon.  
	In the future we'll want something like Bug 532915 describes.

2008-08-26  Brian Merrell <bgmerrell@gmail.com>

	* src/AbstractTask.cs: add id property to abstract
	* src/Backends/Sqlite/SqliteTask.cs: add id property
	* src/Backends/Sqlite/SqliteBackend.cs: add id property
	* src/Backends/Rtm/RtmTask.cs: add id property
	* src/Backends/IceCore/IceTask.cs: add id property
	* src/Backends/EDS/EDSTask.cs: add id property
	* src/ITask.cs: add id property